# hierarchical-collection

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
lib/: hierarchical_collection.hpp  simulation_setup.hpp
run/: batch.cpp  graphic.cpp
